kubernetes/gad/00-00-namespace-gad.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gad
  labels:
    name: gad
    type: productive
