kubernetes/gad/01-configmap.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gad
