kubernetes/gad/01-03-deployment-click.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: gad-click
  namespace: gad
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: gad
        proc: worker
        spec: click
    spec:
      containers:
      - name: gad-master
        # Pulls the default Minio image from Docker Hub
        image: registry.clickyab.ae/clickyab/gad:master.268
        command: [ "/app/bin/clickworker"]
