kubernetes/gad/01-04-deployment-warn.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: gad
    proc: worker
    spec: warn
  name: gad-warn
  namespace: gad
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gad
        proc: worker
        spec: warn
    spec:
      ImagePullSecrets:
        - name: regsecret
      containers:
      - command:
        - /app/bin/warnworker
        image: registry.clickyab.ae/clickyab/gad:master.338
        imagePullPolicy: IfNotPresent
        name: gad-master
        resources:
          limits:
            memory: 200Mi
          requests:
            memory: 100Mi
      terminationGracePeriodSeconds: 30
