kubernetes/gad/01-05-deployment-webserver-dev.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
  labels:
    app: gad
    k8s-app: gad-webserver-dev
    proc: webserver
  name: gad-webserver-dev
  namespace: gad
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gad
        k8s-app: gad-webserver-dev
        proc: webserver
    spec:
      ImagePullSecrets:
        - name: regsecret
      containers:
      - command:
        - /app/bin/server
        image: registry.clickyab.ae/clickyab/gad:dev.345
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 180
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 15
        name: gad-dev
        ports:
        - containerPort: 9000
          name: gad-web-dev
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /healthz
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 15
        resources:
          limits:
            memory: 1224Mi
          requests:
            memory: 1Gi
      terminationGracePeriodSeconds: 30
