kubernetes/gad/02-setup.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: gad-webserver
  namespace: gad
spec:
  strategy:
    type: RollingUpdate
  replicas: 3
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: gad
        proc: webserver
        k8s-app: gad-webserver
    spec:
      containers:
      - name: gad-master
        # Pulls the default Minio image from Docker Hub
        image: registry.clickyab.ae/clickyab/gad:master.268
        livenessProbe:
          httpGet:
            path: /healthz
            port: 9001
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        command: [ "/app/bin/server"]
        ports:
        - name: gad-web
          containerPort: 9001
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: gad-impression
  namespace: gad
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: gad
        proc: worker
        spec: imp
    spec:
      containers:
      - name: gad-master
        # Pulls the default Minio image from Docker Hub
        image: registry.clickyab.ae/clickyab/gad:master.268
        command: [ "/app/bin/impworker"]
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: gad-click
  namespace: gad
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: gad
        proc: worker
        spec: click
    spec:
      containers:
      - name: gad-master
        # Pulls the default Minio image from Docker Hub
        image: registry.clickyab.ae/clickyab/gad:master.268
        command: [ "/app/bin/clickworker"]
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: gad-warn
  namespace: gad
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: gad
        proc: worker
        spec: warn
    spec:
      containers:
      - name: gad-master
        # Pulls the default Minio image from Docker Hub
        image: registry.clickyab.ae/clickyab/gad:master.268
        command: [ "/app/bin/warnworker"]
