kubernetes/gad/05-00-deployment-gad-impression.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: gad
    proc: worker
    spec: imp
  name: gad-impression
  namespace: gad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gad
      proc: worker
      spec: imp
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gad
        proc: worker
        spec: imp
    spec:
      containers:
      - command:
        - /app/bin/impworker
        image: registry.clickyab.ae/clickyab/gad:master.388
        imagePullPolicy: IfNotPresent
        name: gad-master
        resources:
          limits:
            memory: 200Mi
          requests:
            memory: 100Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regsecret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
