kubernetes/gad/05-02-deployment-gad-webserver-dev.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: gad
    k8s-app: gad-webserver-dev
    proc: webserver
  name: gad-webserver-dev
  namespace: gad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gad
      k8s-app: gad-webserver-dev
      proc: webserver
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gad
        k8s-app: gad-webserver-dev
        proc: webserver
    spec:
      containers:
      - command:
        - /app/bin/server
        image: registry.clickyab.ae/clickyab/gad:dev.397
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 180
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 15
        name: gad-dev
        ports:
        - containerPort: 8000
          name: gad-web-dev
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /healthz
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 15
        resources:
          limits:
            memory: 1224Mi
          requests:
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regsecret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
