kubernetes/gad/05-03-deployment-webserver.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: gad
    k8s-app: gad-webserver
    proc: webserver
  name: gad-webserver
  namespace: gad
spec:
  replicas: 5
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gad
        k8s-app: gad-webserver
        proc: webserver
    spec:
      imagePullSecrets:
        - name: regsecret
      containers:
      - command:
        - /app/bin/server
        image: registry.clickyab.ae/clickyab/gad:master.343
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 180
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 15
        name: gad-master
        ports:
        - containerPort: 9000
          name: gad-web
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /healthz
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 15
        resources:
          limits:
            memory: 1500Mi
          requests:
            memory: 1100Mi
      terminationGracePeriodSeconds: 30
