kubernetes/gad/02-01-service-wedserver.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: gad-we-service
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: GadService
  name: gad-service
  namespace: gad
spec:
  ports:
  - name: gadweb
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    k8s-app: gad-webserver
  type: ClusterIP
