kubernetes/gad/02-02-service-webserver-dev.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: gad-dev-service
  name: gad-dev-service
  namespace: gad
spec:
  ports:
  - name: gad-web-dev
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    k8s-app: gad-webserver-dev
  type: ClusterIP
