kubernetes/gad/03-services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gad-service
  namespace: gad
  labels:
    k8s-app: gad-we-service
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "GadService"
spec:
  selector:
    k8s-app: gad-webserver
  ports:
  - name: gadweb
    port: 9001
    protocol: TCP
