kubernetes/gad/06-00-service-gad-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: gad-we-service
  name: gad-service
  namespace: gad
spec:
  ports:
  - name: gadweb
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    k8s-app: gad-webserver
  type: ClusterIP
