kubernetes/gad/07-00-ingress-webserver.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gad-ingress
  namespace: gad
spec:
  rules:
  - host: v.clickyab.com
    http:
      paths:
      - backend:
          serviceName: gad-service
          servicePort: 9000
        path: /
  - host: native.clickyab.com
    http:
      paths:
      - backend:
          serviceName: gad-service
          servicePort: 9000
        path: /
  - host: e.clickyab.com
    http:
      paths:
      - backend:
          serviceName: gad-service
          servicePort: 9000
        path: /
  - host: app.clickyab.com
    http:
      paths:
      - backend:
          serviceName: gad-service
          servicePort: 9000
        path: /
