kubernetes/gad/07-01-ingress-webserver-dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gad-dev-ingress
  namespace: gad
spec:
  rules:
  - host: v-beta.clickyab.com
    http:
      paths:
      - backend:
          serviceName: gad-dev-service
          servicePort: 9000
        path: /
  - host: native-beta.clickyab.com
    http:
      paths:
      - backend:
          serviceName: gad-dev-service
          servicePort: 9000
        path: /
  - host: e-beta.clickyab.com
    http:
      paths:
      - backend:
          serviceName: gad-dev-service
          servicePort: 9000
        path: /
  - host: app-beta.clickyab.com
    http:
      paths:
      - backend:
          serviceName: gad-dev-service
          servicePort: 9000
        path: /
  - host: a-beta.clickyab.com
    http:
      paths:
      - backend:
          serviceName: gad-dev-service
          servicePort: 9000
        path: /
