kubernetes/gad/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gad-ingress
  namespace: gad
spec:
  rules:
  - host: v.clickyab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gad-service
          servicePort: 9001
  - host: native.clickyab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gad-service
          servicePort: 9001
  - host: e.clickyab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gad-service
          servicePort: 9001
  - host: app.clickyab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gad-service
          servicePort: 9001
  - host: a-beta.clickyab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gad-service
          servicePort: 9001
